--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,8 @@
 <html>
-	<head>
-	</head>
-	<body>
-		Hello, World!
-	</body>
+  <head>
+  </head>
+  <body>
+    <h1>Hello, World!</h1>
+    <!-- This is an unwanted but committed change -->
+  </body>
 </html>
