Revert "oops? we didn't want this commit"
This reverts commit d2d23ffa3eb9d083f459d6b25f3c47543f68d970.

--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,7 @@
 <html>
-  <head>
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-    <!-- This is an unwanted but committed change -->
-  </body>
+	<head>
+	</head>
+	<body>
+		Hello, World!
+	</body>
 </html>
