Hello uses style.css

--- a/lib/hello.html
+++ b/lib/hello.html
@@ -1,6 +1,7 @@
 <!-- Author: Oley-Projects (oley.for.git@gmail.com)-->
 <html>
 	<head>
+		<link type="text/css" rel="stylesheet" media="all" href="style.css" />
 	</head>
 	<body>
 		Hello, World!
