--- a/lib/hello.html
+++ b/lib/hello.html
@@ -1,8 +1,9 @@
 <!-- Author: Oley-Projects (oley.for.git@gmail.com)-->
 <html>
 	<head>
+	  <!-- no style -->
 	</head>
 	<body>
-		Hello, World!
+		<h1>Hello, World! Life is great!</h1>
 	</body>
 </html>
